--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4       3.39       17850  United Kingdom         20.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "[397924 rows x 2 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "       'Bahrain', 'Malta', 'RSA'], dtype=object)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,18 +414,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating a new column and filling it with the quantiles of amount_spent and then labelling thesese rows as VIP and Prefered customers\n",
     "\n",
-    "orders[\"VIP\"] = pd.qcut(orders[\"amount_spent\"],q=20,labels=['p0','p5','p10','p15','p20','p25','p30','p35','p40','p45','p50','p55','p60','p65','p70','Prefered C 4','Prefered C 3','Prefered C 2','Prefered C 1','VIP C '])"
+    "orders[\"VIP\"] = pd.qcut(orders[\"amount_spent\"],q=20,labels=['p0','p5','p10','p15','p20','p25','p30','p35','p40','p45','p50','p55','p60','p65','p70','Prefered C 4','Prefered C 3','Prefered C 2','Prefered C 1','VIP C '])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#orders['Customer_type'] = pd.qcut(orders['amount_spent'],q = [0,0.75,0.95,1] , labels = ['Regular','Preferred','VIP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#total_spent[\"Quantiles\"]= pd.cut(total_spent[\"amount_spent\"], \n",
+    "                             #bins = [total_spent[\"amount_spent\"].quantile(0.),total_spent[\"amount_spent\"].quantile(.75),total_spent[\"amount_spent\"].quantile(.95),total_spent[\"amount_spent\"].quantile(1.)],\n",
+    "                             #labels=[\"Casual\", \"Preferred\",\"VIP\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>VIP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>p60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>VIP+Prefered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>VIP+Prefered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>VIP+Prefered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>VIP+Prefered</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent           VIP  \n",
+       "0       2.55       17850  United Kingdom         15.30           p60  \n",
+       "1       3.39       17850  United Kingdom         20.34  VIP+Prefered  \n",
+       "2       2.75       17850  United Kingdom         22.00  VIP+Prefered  \n",
+       "3       3.39       17850  United Kingdom         20.34  VIP+Prefered  \n",
+       "4       3.39       17850  United Kingdom         20.34  VIP+Prefered  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +745,7 @@
        "[397924 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +864,7 @@
        "[397924 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +1047,7 @@
        "248706       5.06       17450  United Kingdom       7144.72  VIP C   "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +1115,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -955,10 +1145,10 @@
        "Japan                     172\n",
        "Spain                     129\n",
        "Norway                    114\n",
-       "Denmark                    62\n",
        "Finland                    62\n",
-       "Singapore                  41\n",
+       "Denmark                    62\n",
        "Portugal                   41\n",
+       "Singapore                  41\n",
        "Belgium                    39\n",
        "Channel Islands            31\n",
        "Israel                     28\n",
@@ -970,18 +1160,18 @@
        "Lithuania                   7\n",
        "Iceland                     7\n",
        "Lebanon                     6\n",
-       "United Arab Emirates        4\n",
        "USA                         4\n",
        "Malta                       4\n",
+       "United Arab Emirates        4\n",
        "Brazil                      3\n",
        "Canada                      3\n",
-       "Unspecified                 2\n",
        "Bahrain                     2\n",
+       "Unspecified                 2\n",
        "Czech Republic              1\n",
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1227,7 @@
        "Name: VIP, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1081,12 +1271,12 @@
        "Iceland                    67\n",
        "USA                        60\n",
        "Greece                     48\n",
-       "United Arab Emirates       36\n",
        "Unspecified                36\n",
+       "United Arab Emirates       36\n",
        "Canada                     33\n",
        "Malta                      30\n",
-       "Lebanon                    27\n",
        "Lithuania                  27\n",
+       "Lebanon                    27\n",
        "European Community         23\n",
        "Czech Republic             20\n",
        "RSA                        18\n",
@@ -1095,7 +1285,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,6 +1297,13 @@
     "\n",
     "totalVIP[\"Country\"].value_counts()  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
