--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# get_dummies function and add the df outcome to a variable"
    ]
   },
   {
@@ -149,7 +149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# df.corr() between get dummies df \n",
+    "\n",
+    "#df2[\"new total column\"] = pokemon[\"Total\"] ------ adding columns to new dataframe"
    ]
   },
   {
@@ -167,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "#from the correlation we can infeer"
    ]
   }
  ],
@@ -187,7 +189,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
