--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,13 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import required libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# import required libraries\n"
    ]
   },
   {
@@ -44,11 +42,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397919</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22613</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>pack of 20 spaceboy napkins</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>France</td>\n",
+       "      <td>10.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397920</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22899</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>children's apron dolly girl</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>France</td>\n",
+       "      <td>12.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397921</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23254</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>childrens cutlery dolly girl</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>France</td>\n",
+       "      <td>16.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397922</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23255</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>childrens cutlery circus parade</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>France</td>\n",
+       "      <td>16.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397923</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22138</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>baking set 9 piece retrospot</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>France</td>\n",
+       "      <td>14.85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>397924 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0          536365    85123A  2010     12    3     8   \n",
+       "1          536365     71053  2010     12    3     8   \n",
+       "2          536365    84406B  2010     12    3     8   \n",
+       "3          536365    84029G  2010     12    3     8   \n",
+       "4          536365    84029E  2010     12    3     8   \n",
+       "...           ...       ...   ...    ...  ...   ...   \n",
+       "397919     581587     22613  2011     12    5    12   \n",
+       "397920     581587     22899  2011     12    5    12   \n",
+       "397921     581587     23254  2011     12    5    12   \n",
+       "397922     581587     23255  2011     12    5    12   \n",
+       "397923     581587     22138  2011     12    5    12   \n",
+       "\n",
+       "                                Description  Quantity          InvoiceDate  \\\n",
+       "0        white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                       white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2            cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3       knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4            red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "...                                     ...       ...                  ...   \n",
+       "397919          pack of 20 spaceboy napkins        12  2011-12-09 12:50:00   \n",
+       "397920         children's apron dolly girl          6  2011-12-09 12:50:00   \n",
+       "397921        childrens cutlery dolly girl          4  2011-12-09 12:50:00   \n",
+       "397922      childrens cutlery circus parade         4  2011-12-09 12:50:00   \n",
+       "397923        baking set 9 piece retrospot          3  2011-12-09 12:50:00   \n",
+       "\n",
+       "        UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0            2.55       17850  United Kingdom         15.30  \n",
+       "1            3.39       17850  United Kingdom         20.34  \n",
+       "2            2.75       17850  United Kingdom         22.00  \n",
+       "3            3.39       17850  United Kingdom         20.34  \n",
+       "4            3.39       17850  United Kingdom         20.34  \n",
+       "...           ...         ...             ...           ...  \n",
+       "397919       0.85       12680          France         10.20  \n",
+       "397920       2.10       12680          France         12.60  \n",
+       "397921       4.15       12680          France         16.60  \n",
+       "397922       4.15       12680          France         16.60  \n",
+       "397923       4.95       12680          France         14.85  \n",
+       "\n",
+       "[397924 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -81,12 +345,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>Quantiles</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14646</th>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>280206.02</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18102</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>259657.30</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17450</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>194550.79</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16446</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>168472.50</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14911</th>\n",
+       "      <th>EIRE</th>\n",
+       "      <td>143825.06</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17956</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>12.75</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16454</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>6.90</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14792</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>6.20</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16738</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>3.75</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13256</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4347 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           amount_spent Quantiles\n",
+       "CustomerID Country                               \n",
+       "14646      Netherlands        280206.02       VIP\n",
+       "18102      United Kingdom     259657.30       VIP\n",
+       "17450      United Kingdom     194550.79       VIP\n",
+       "16446      United Kingdom     168472.50       VIP\n",
+       "14911      EIRE               143825.06       VIP\n",
+       "...                                 ...       ...\n",
+       "17956      United Kingdom         12.75    Casual\n",
+       "16454      United Kingdom          6.90    Casual\n",
+       "14792      United Kingdom          6.20    Casual\n",
+       "16738      United Kingdom          3.75    Casual\n",
+       "13256      United Kingdom          0.00    Casual\n",
+       "\n",
+       "[4347 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -99,11 +497,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom     178\n",
+       "Germany             11\n",
+       "France               9\n",
+       "Switzerland          3\n",
+       "EIRE                 2\n",
+       "Japan                2\n",
+       "Portugal             2\n",
+       "Spain                2\n",
+       "Norway               1\n",
+       "Netherlands          1\n",
+       "Singapore            1\n",
+       "Finland              1\n",
+       "Sweden               1\n",
+       "Denmark              1\n",
+       "Cyprus               1\n",
+       "Channel Islands      1\n",
+       "Australia            1\n",
+       "Name: Quantiles, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -115,12 +542,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom     934\n",
+       "Germany             39\n",
+       "France              29\n",
+       "Belgium             11\n",
+       "Switzerland          9\n",
+       "Spain                7\n",
+       "Portugal             7\n",
+       "Norway               7\n",
+       "Italy                5\n",
+       "Finland              5\n",
+       "Channel Islands      4\n",
+       "Australia            4\n",
+       "Japan                4\n",
+       "EIRE                 3\n",
+       "Denmark              3\n",
+       "Cyprus               3\n",
+       "Sweden               2\n",
+       "Israel               2\n",
+       "Lebanon              1\n",
+       "Iceland              1\n",
+       "Greece               1\n",
+       "Malta                1\n",
+       "Netherlands          1\n",
+       "Poland               1\n",
+       "Singapore            1\n",
+       "Canada               1\n",
+       "Austria              1\n",
+       "Name: Quantiles, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
