updating minor changes

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -15,7 +15,7 @@
     "* One aggregate per store that adds up the rest of the values.\n",
     "* One aggregate per item that adds up the rest of the values.\n",
     "\n",
-    "You can import the `raw_sales` table from the database `retail_sales` fon of Ironhack's databases. \n",
+    "You can import the `retail_sales-raw_sales` table from the data folder in this repository. \n",
     "\n",
     "## Your task\n",
     "Therefore, your process will consist of the following steps:\n",
@@ -45,9 +45,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack-3.7",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack-3.7"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
